Fix spacing of text on tiles

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -93,7 +93,10 @@ main.dashboard {
     z-index: 50
   }
   .tile p {
-    padding: 10px;
+    margin: 0px;
+  }
+  .tile-info {
+    padding: 5px;
   }
   .tile h4 {
     z-index: 100;
